<resources>
    <string name="app_name">Hi!Dokter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_edit_profile">Ubah Data Diri</string>
    <string name="label_patient_page">Isi Data Pasien</string>
    <string name="label_profile">Profil</string>
    <string name="title_doctor_profile">Profil Dokter</string>
    <string name="button_forgot_password">Lupa Password?</string>
    <string name="button_register_here">Daftar Disini</string>
    <string name="button_login">Login</string>
    <string name="button_home">Halaman Utama</string>
    <string name="message_error_email">Format email tidak sesuai</string>
    <string name="message_error_password">Password harus mengandung setidaknya satu angka dan satu huruf kapital</string>
    <string name="message_error_id_number">"Nomor KTP harus berisi 16 angka"</string>
    <string name="format_error_min_length">"Minimal %d karakter"</string>
    <string name="message_please_wait">"Mohon Tunggu"</string>
    <string name="message_error_confirm_email">Konfirmasi email tidak sesuai</string>
    <string name="message_error_confirm_password">Konfirmasi password tidak sesuai</string>
    <string name="message_error_old_password">Password lama tidak sesuai</string>
    <string name="message_reset_password_success">Kami telah mengirim pesan ke email %s. Silahkan pesan kotak masuk pada email anda untuk melakukan reset password</string>
    <string name="message_change_password_success">Password berhasil diubah</string>
    <string name="message_error_empty_field">Form tidak boleh kosong</string>
    <string name="title_activity_home">Hi!Dokter</string>
    <string name="title_article">Article</string>
    <string name="title_doctor">Doctor</string>
    <string name="title_profile">Profile</string>
    <string name="hint_article_image">article image</string>
    <string name="hint_detail_article_image">detail article image</string>
    <string name="hint_search_article">Cari artikel...</string>

    <string name="hint_button_share">button share</string>

    <string name="hint_confirm_password">Konfirmasi Password</string>
    <string name="button_register">Daftar</string>
    <string name="label_register_now">Daftar Sekarang</string>
    <string name="label_input_email_and_password_register">Silahkan masukkan email dan password anda untuk membuat akun</string>
    <string name="message_input_account_for_login">Selamat anda telah berhasil melakukan pembuatan akun. Silahkan login dengan akun yang sudah anda buat</string>
    <string name="message_consultation_success">Pengajuan konsultasi anda telath berhasil dibuat sesuai dengan jadwal yang anda pilih</string>
    <string name="title_register_success">Pendaftaran Berhasil</string>
    <string name="title_consultation_success">Pengajuan Konsultasi Berhasil</string>
    <string name="title_edit_profile_success">Edit Profile Berhasil</string>
    <string name="title_reset_password_success">Email Telah Terkirim</string>
    <string name="title_forget_password">Lupa Password</string>
    <string name="title_change_password">Ubah Password</string>
    <string name="message_input_registered_email">Masukkan email yang terdaftar</string>
    <string name="message_we_will_send_email">Kami akan mengirimkan sebuah pesan melalui email anda terkait instruksi untuk reset password</string>
    <string name="button_recover_password">Pulihkan Password</string>
    <string name="button_ok">OK</string>
    <string name="desc_profile_image">Profile Image</string>
    <string name="sample_location">Jakarta, Indonesia</string>
    <string name="label_date_of_birth">Tanggal Lahir</string>
    <string name="label_Id_card_number">Nomor KTP</string>
    <string name="label_address">Alamat</string>
    <string name="button_change_password">Ubah Password</string>
    <string name="button_logout">Logout</string>
    <string name="button_skip">Lewati</string>
    <string name="button_next">Selanjutnya</string>
    <string name="label_start">Mulai</string>
    <string name="title_on_boarding_1">Selamat Datang Di Hi!Dokter</string>
    <string name="title_on_boarding_2">Artikel Kesehatan</string>
    <string name="title_on_boarding_3">Siap Untuk Berkonsultasi</string>
    <string name="message_on_boarding_3">Lebih dari 20 ribu dokter siap berkonsultasi denganmu</string>
    <string name="message_on_boarding_2"><![CDATA[Panduan kesehatan terlengkap mulai dari artikel & tips kesehatan]]></string>
    <string name="message_on_boarding_1"><![CDATA[Konsultasi bersama dokter umum & spesialis, kapan pun, di mana pun]]></string>

    <string name="sample_detail_desc">Hi!Dokter adalah platform kesehatan digital nomor satu di Indonesia dengan lebih dari 26 juta pengguna aktif setiap bulannya, serta lebih dari 30 ribu dokter yang bergabung. Sejak tahun 2014, Hi!Dokter telah unggul dalam menyediakan informasi kesehatan yang akurat, mudah dipahami, dan dapat diakses oleh siapa saja, kapan saja, dan di mana saja. Semua informasi kesehatan yang tersedia di Hi!Dokter disusun dalam bahasa Indonesia yang mudah dimengerti dan ditinjau oleh tim dokter yang kompeten.</string>

    <string name="label_location">Lokasi</string>
    <string name="label_schedule">Jadwal Praktik</string>
    <string name="button_consultation">Ajukan Konsultasi</string>
    <string name="format_yoe">Pengalaman %s tahun</string>
    <string name="hint_search_dokter">Cari dokter anda...</string>
    <string name="title_no_data">Data Tidak Ditemukan</string>
    <string name="title_problem_occurred">Oops, ada masalah pada sistem</string>
    <string name="message_problem_occurred">Terjadi masalah pada jaringan anda atau ada masalah pada sistem kami. Silahkan klik tombol ulangi untuk memuat ulang</string>
    <string name="title_not_logged_in">Anda belum login</string>
    <string name="message_not_logged_in">Silahkan login dengan akun anda untuk menggunakan fitur ini. Anda dapat login dengan melakukan klik pada tombol Login</string>
    <string name="message_no_data">Tidak ada data yang tersedia</string>
    <string name="message_pick_schedule">*Untuk mengajukan konsultasi silahkan pilih salah satu jadwal konsultasi dengan melakukan klik pada jam konsultasi yang tersedia</string>
    <string name="hint_full_name">Nama Lengkap</string>
    <string name="hint_birth_date">Tanggal Lahir</string>
    <string name="hint_gender">Jenis Kelamin</string>
    <string name="hint_ktp_number">Nomor KTP</string>
    <string name="hint_address">Alamat Sesuai KTP</string>
    <string name="button_change_data">Ubah Data</string>
    <string name="button_male">Laki-laki</string>
    <string name="hint_female">Perempuan</string>
    <string name="cd_date_picker">Button untuk memilih tanggal</string>
    <string name="cd_change_photo">Tombol untuk mengganti foto</string>
    <string name="cd_edit_profile_button">Tombol untuk mengedit profile</string>
    <string name="option_menu_profile">profile</string>
    <string name="option_menu_share">share</string>
    <string name="patient_instruction">Silahkan isi data pasien sesuai dengan data yang terdaftar pada KTP pasien</string>
    <string name="hint_old_password">Password Lama</string>
    <string name="hint_new_password">Password Baru</string>
    <string name="hint_change_password">Ubah Password</string>
    <string name="error_email_exist">User already exists</string>
    <string name="error_email_exist_id">Email sudah terdaftar</string>
    <string name="error_email_or_password">Incorrect email or password</string>
    <string name="error_email_or_password_id">Email atau password salah</string>
    <string name="label_error">error</string>
    <string name="format_birth_date">d MMMM yyyy</string>
    <string name="message_tap_more_to_exit">Ketuk sekali lagi untuk keluar</string>
    <string name="message_email_not_found">Email tidak terdaftar</string>
    <string name="action_retry">Ulangi</string>

</resources>