<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.androidgroup4.ui.home.HomeFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailArticleFragment"
            app:destination="@id/detailArticleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_doctor"
        android:name="com.example.androidgroup4.ui.doctor.DoctorListFragment"
        android:label="@string/title_doctor"
        tools:layout="@layout/fragment_doctor_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.androidgroup4.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailArticleFragment"
        android:name="com.example.androidgroup4.ui.detail.DetailArticleFragment"
        android:label="fragment_detail_article"
        tools:layout="@layout/fragment_detail_article" />
</navigation>