<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_round_bottom_blue"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toolbarMain"
        layout="@layout/layout_toolbar" />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AndroidAppText.Bold.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_40sp"
        app:layout_constraintBottom_toTopOf="@id/mcvLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                style="@style/AndroidAppText.Black"
                android:layout_width="match_parent"
                android:background="@drawable/bg_rectangle_pink_rounded"
                android:drawableStart="@drawable/ic_x_mark"
                android:drawablePadding="@dimen/dimen_12dp"
                android:gravity="center_vertical"
                android:padding="@dimen/dimen_12dp"
                android:textSize="@dimen/text_size_12sp"
                android:visibility="gone"
                tools:text="@string/error_email_or_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/AndroidAppTextInputLayout"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/AndroidAppEditText"
                    android:backgroundTint="@color/colorTransparent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/AndroidAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_4dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/AndroidAppEditText"
                    android:backgroundTint="@color/colorTransparent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForgotPassword"
        style="@style/AndroidAppTextButton"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_4dp"
        android:paddingEnd="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_4dp"
        android:text="@string/button_forgot_password"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toEndOf="@id/mcvLogin"
        app:layout_constraintTop_toBottomOf="@id/mcvLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/AndroidAppButton.White"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:text="@string/button_login"
        app:layout_constraintTop_toBottomOf="@id/btnForgotPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/AndroidAppButton"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/button_register_here"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>