<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteTwo"
    android:visibility="gone">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_42dp"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:layout_marginEnd="@dimen/dimen_42dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/AndroidAppText.Bold"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:text="@string/title_not_logged_in"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login" />

    <TextView
        android:id="@+id/tv_message"
        style="@style/AndroidAppText"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:text="@string/message_not_logged_in"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/AndroidAppButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:text="@string/button_login"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toEndOf="@id/tv_message"
        app:layout_constraintStart_toStartOf="@id/tv_message"
        app:layout_constraintTop_toBottomOf="@id/tv_message" />

</androidx.constraintlayout.widget.ConstraintLayout>