<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/toolbarResetPassword"
        layout="@layout/layout_toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:src="@drawable/ic_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarResetPassword" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@+id/imgReset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInputEmail"
                style="@style/AndroidAppText.Black"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:text="@string/message_input_registered_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/AndroidAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen_12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/AndroidAppEditText"
                    android:backgroundTint="@color/colorTransparent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AndroidAppText.White"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_marginStart="@dimen/dimen_18dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_18dp"
        android:text="@string/message_we_will_send_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcvLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        style="@style/AndroidAppButton.White"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/button_recover_password"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>