<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.auth.ChangePasswordActivity">

    <include
        android:id="@+id/toolbarChangePassword"
        layout="@layout/layout_toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:src="@drawable/ic_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarChangePassword" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/input_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@+id/imgChangePassword">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOldPassword"
                style="@style/AndroidAppTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtOldPassword"
                    style="@style/AndroidAppEditText"
                    android:backgroundTint="@color/colorTransparent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_old_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPassword"
                style="@style/AndroidAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:layout_constraintTop_toBottomOf="@id/tilOldPassword"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNewPassword"
                    style="@style/AndroidAppEditText"
                    android:backgroundTint="@color/colorTransparent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/AndroidAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_4dp"
                app:layout_constraintTop_toBottomOf="@id/tilNewPassword"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmPasword"
                    style="@style/AndroidAppEditText"
                    android:backgroundTint="@color/colorTransparent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_password"
        style="@style/AndroidAppButton.White"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/hint_change_password"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>